# remu

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  remucli
cli/: remu_cli.py  setup.py
cli/fw-patches/: 0001-bootdone-remu-fast-path.patch  0002-host-path-trace.patch  README.md
cli/qemu-patches/: 0001-arm-gicv3-first-cpu-index.patch  0002-arm-gicv3-reset-cpuif-after-init.patch
docs/: architecture.md  debugging.md  hdma-notion-notes.md  rbdma-smmu-review.md  roadmap.md
guest/: README.md  build-guest-image.sh  build-kmd.sh  build-umd.sh  setup.sh
scripts/: build-qemu.sh  run-fw.sh
src/bridge/: remu_doorbell_proto.h  remu_frame.h  remu_hdma_proto.h
src/host/: meson.build  r100_npu_pci.c
src/include/: remu_addrmap.h
src/include/r100/: remu_addrmap.h
src/machine/: meson.build  r100_cm7.c  r100_cmu.c  r100_dma.c  r100_dnc.c  r100_doorbell.c  r100_hbm.c  r100_hdma.c  r100_hdma.h  r100_imsix.c  r100_imsix.h  r100_logbuf.c  r100_mailbox.c  r100_mailbox.h  r100_pcie_outbound.c  r100_pmu.c  r100_pvt.c  r100_qspi.c  r100_qspi_boot.c  r100_rbc.c  r100_rbdma.c  r100_rbdma.h  r100_smmu.c  r100_smmu.h  r100_soc.c  r100_soc.h  r100_sysreg.c
tests/: hello_uart.S  m5_dataflow_test.py  m6_doorbell_test.py  m7_msix_test.py  m8_issr_test.py  p10_cfgshadow_probe.py  p10_qcp_gdb_probe.py  p10_umd_smoke_test.py  p11_smmu_walk_test.py  p11b_smmu_evtq_test.py  p4a_rbdma_stub_test.py  p4b_rbdma_oto_test.py  p5_hdma_ll_test.py
tests/scripts/: gdb_inspect_cp1.gdb  mem_dump.py  smmu_decode.py
